# muffin-peewee

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.rst  Changelog  MANIFEST.in  Makefile  README.rst  example.py  muffin_peewee.py  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
example/: __init__.py  models.py  views.py
example/migrations/: 000_initial.py
muffin_peewee/: __init__.py  debugtoolbar.py  fields.py  migrate.py  migration.tmpl  models.py  mpeewee.py  plugin.py
