[bumpversion]
commit = True
current_version = 1.5.2
files = muffin_peewee.py
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-peewee
version = attr: muffin_peewee.__version__
url = https://github.com/klen/muffin-peewee
description = Peewee integration for Muffin framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = peewee, sql, asyncio, trio, asgi, muffin
project_urls = 
	Documentation = https://github.com/klen/muffin-peewee
	Source code = https://github.com/klen/muffin-peewee
	Issue tracker = https://github.com/klen/muffin-peewee/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
py_modules = muffin_peewee
python_requires = >= 3.7
zip_safe = False
install_requires = 
	muffin          >= 0.42
	peewee          >= 3
	peewee-migrate  >= 1.2.1
	aio-peewee      >= 0.1.6

[options.extras_require]
tests = 
	anyio
	trio
	pytest
build = 
	bump2version
	twine
	wheel
example = 
	uvicorn
postgres = 
	psycopg2-binary

[pylama]
linters = pep8,pyflakes,mccabe,pep257
ignore = D211,D213

[pylama:pycodestyle]
max_line_length = 100

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -xsv
